cập nhập tính tiền đăng nhập+mở máy

--- a/ProGM.Business/ProGM.Business.csproj
+++ b/ProGM.Business/ProGM.Business.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extention\FormatExtention.cs" />
     <Compile Include="Model\ResponseApiComputerDetail.cs" />
     <Compile Include="Model\responseListPC.cs" />
     <Compile Include="ApiBusiness\RestshapCommand.cs" />
