--- a/ProGM.Management/packages.config
+++ b/ProGM.Management/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net452" />
+  <package id="EngineIoClientDotNet" version="1.0.8" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
-  <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net452" />
-  <package id="WebSocket4Net" version="0.14.1" targetFramework="net452" />
+  <package id="SocketIoClientDotNet" version="1.0.8" targetFramework="net452" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net452" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net452" />
+  <package id="WebSocket4Net" version="0.15.2" targetFramework="net452" />
 </packages>
