--- a/ProGM.Business/ProGM.Business.csproj
+++ b/ProGM.Business/ProGM.Business.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Extention\PCExtention.cs" />
     <Compile Include="Model\CategoryListResponse.cs" />
     <Compile Include="Model\ProductResponse.cs" />
+    <Compile Include="Model\responseAccountDetail.cs" />
     <Compile Include="Model\ResponseApiComputerDetail.cs" />
     <Compile Include="Model\responseListPC.cs" />
     <Compile Include="ApiBusiness\RestshapCommand.cs" />
