--- a/ProGM.Management/packages.config
+++ b/ProGM.Management/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EngineIoClientDotNet" version="0.9.22" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net452" />
+  <package id="NLog" version="4.6.8" targetFramework="net452" />
   <package id="SocketIoClientDotNet" version="0.9.13" targetFramework="net452" />
   <package id="WebSocket4Net" version="0.14.1" targetFramework="net452" />
 </packages>
