--- a/ProGM.Business/ProGM.Business.csproj
+++ b/ProGM.Business/ProGM.Business.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Extention\Logger.cs" />
     <Compile Include="Extention\PCExtention.cs" />
     <Compile Include="Model\CategoryListResponse.cs" />
+    <Compile Include="Model\Messeage.cs" />
     <Compile Include="Model\ProductResponse.cs" />
     <Compile Include="Model\responseAccountDetail.cs" />
     <Compile Include="Model\ResponseApiComputerDetail.cs" />
@@ -71,6 +72,7 @@
     <Compile Include="Model\LoginResponse.cs" />
     <Compile Include="Model\PCStatus.cs" />
     <Compile Include="Model\SocketReceivedData.cs" />
+    <Compile Include="Model\ResonseWalletDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketBusiness\AsyncClient.cs" />
     <Compile Include="SocketBusiness\AsyncSocketListener.cs" />
